syntax = "proto3";
package proto;

message SayHelloRequest {
    string yourName = 1;
    string password = 2;
}

message SayHelloResponse {
    string message = 1;
}

service Hello {
    rpc sayHello (SayHelloRequest) returns (SayHelloResponse) {}
}
